tests/error/struct_errors/non_guppy_func.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct:
    x: int

    def f(self: "MyStruct") -> None:
        pass


guppy.compile(MyStruct)
