tests/error/struct_errors/non_guppy_func.err
Error: Not a Guppy method (at $FILE:8:4)
  | 
6 |     x: int
7 | 
8 |     def f(self: "MyStruct") -> None:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
9 |         pass
  | ^^^^^^^^^^^^ Method `f` of struct `MyStruct` is not a Guppy function

Help: Add a `@guppy` annotation to turn `f` into a Guppy method

Guppy compilation failed due to 1 previous error
